welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:18: error: ')' expected but '}' found.
	}
        ^